--- a/css/style.css
+++ b/css/style.css
@@ -429,15 +429,15 @@ header {
 }
 
 .Modern-Slider .item-1 .image {
-  background-image: url(../img/slide_1.jpg);
+  background-image: url(../img/home/1.jpeg);
 }
 
 .Modern-Slider .item-2 .image {
-  background-image: url(../img/slide_2.jpg);
+  background-image: url(../img/home/2.jpeg);
 }
 
 .Modern-Slider .item-3 .image {
-  background-image: url(../img/slide_3.jpg);
+  background-image: url(../img/home/3.jpeg);
 }
 
 .Modern-Slider .PrevArrow:before{content:'\f104';}
