updated the photos

--- a/css/style.css
+++ b/css/style.css
@@ -598,6 +598,9 @@ header {
   padding-top: 40px;
   border-bottom: 1px solid #eee;
 }
+/* #box {
+  padding-left: 200px;
+} */
 
 
 /* Blog Style */
