--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 
 p {
@@ -195,11 +195,11 @@ header {
 /* Sidebar Style */
 
 .sidebar-navigation {
-  width: 22.5%;
+  width: 18.5%;
   float: left;
   height: 100%;
   position: fixed;
-  background-color: rgba(12,12,12,0.6);
+  background-color: rgba(12,12,12,0.2);
   z-index: 10;
 }
 
