--- a/css/style.css
+++ b/css/style.css
@@ -141,14 +141,14 @@ header {
   z-index: 10;
   width: 100%;
   height: 80px;
-  background-color: rgba(250,250,250,.95);
+  background-color: rgba(0, 0, 0, 0.95);
   box-shadow: 0px 5px 15px rgba(0,0,0,0.2);
 }
 
 .navbar-toggle {
   position: absolute;
   top: 40%;
-  left: 50%;
+  right: 0%;
   display: inline-block;
   -webkit-transform: translateX(-50%) translateY(-50%);
   -moz-transform: translateX(-50%) translateY(-50%);
@@ -163,7 +163,7 @@ header {
 }
 
 #main-nav ul {
-  text-align: center;
+  text-align: right;
   background-color: rgba(0,0,0,0.9);
   margin-top: 59px;
   width: 100%;
@@ -188,7 +188,8 @@ header {
 }
 
 .navbar-toggle span {
-  background-color: #232323;
+  background-color: rgba(226, 226, 226, 0.9);
+  margin: 8px 0;
 }
 
 
