--- a/css/style.css
+++ b/css/style.css
@@ -146,6 +146,7 @@ header {
 }
 
 .navbar-toggle {
+
   position: absolute;
   top: 40%;
   right: 0%;
@@ -355,7 +356,7 @@ header {
   margin-top: 350px;
   margin-bottom: 15px;
   color: rgb(255, 255, 255);
-  font-weight: 300;
+  font-weight: bold;
 }
 @media screen and (min-width: 601px) {
   .Modern-Slider .info h1 {
@@ -605,7 +606,11 @@ header {
   padding-bottom: 40px;
   padding-top: 40px;
   border-bottom: 1px solid #eee;
+
 }
+
+
+
 /* #box {
   padding-left: 200px;
 } */
