--- a/css/style.css
+++ b/css/style.css
@@ -754,7 +754,15 @@ header {
   position: relative;
 }
 
+/* Form */
 
+#form {
+  padding-left: 60px;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  padding-right: 60px;
+  border-bottom: 1px solid #eee;
+}
 
 
 /* Contact Style */
