added about section, updated gallery

--- a/Home.css
+++ b/Home.css
@@ -45,7 +45,7 @@
 
 @media (max-width: 767px) {
   .u-section-1-1 .u-sheet-1 {
-    min-height: 50vw;
+    height: 100vh;
   }
 
   .u-section-1-1 .u-text-1 {
@@ -69,7 +69,6 @@
 }
 
 .u-section-1-2 .u-sheet-1 {
-  /* min-height: 801px; */
   height: 100vh;
 }
 
@@ -87,7 +86,7 @@
 
 @media (max-width: 1199px) {
   .u-section-1-2 .u-sheet-1 {
-    min-height: 660px;
+    height: 100vh;
   }
 
   .u-section-1-2 .u-text-1 {
@@ -99,7 +98,7 @@
 
 @media (max-width: 991px) {
   .u-section-1-2 .u-sheet-1 {
-    min-height: 50vw;
+    height: 100vh;
   }
 
   .u-section-1-2 .u-text-1 {
@@ -132,7 +131,6 @@
 }
 
 .u-section-1-3 .u-sheet-1 {
-  /* min-height: 801px; */
   height: 100vh;
 }
 
@@ -150,7 +148,7 @@
 
 @media (max-width: 1199px) {
   .u-section-1-3 .u-sheet-1 {
-    min-height: 660px;
+    height: 100vh;
   }
 
   .u-section-1-3 .u-text-1 {
@@ -165,7 +163,7 @@
 
 @media (max-width: 991px) {
   .u-section-1-3 .u-sheet-1 {
-    min-height: 100vh;
+    height: 100vh;
   }
 
   .u-section-1-3 .u-text-1 {
@@ -181,7 +179,7 @@
 
 @media (max-width: 767px) {
   .u-section-1-3 .u-sheet-1 {
-    min-height: 50vw;
+    height: 100vh;
   }
 
   .u-section-1-3 .u-text-1 {
@@ -255,5 +253,435 @@
 
   .u-block-6545-4 {
     right: calc(((100% - 340px) / 2)  + -27px);
+  }
+}.u-section-2 {
+  background-image: none;
+}
+
+.u-section-2 .u-sheet-1 {
+  min-height: 870px;
+}
+
+.u-section-2 .u-layout-wrap-1 {
+  margin: 0 auto 60px 0;
+}
+
+.u-section-2 .u-layout-cell-1 {
+  min-height: 598px;
+}
+
+.u-section-2 .u-container-layout-1 {
+  padding: 30px;
+}
+
+.u-section-2 .u-shape-1 {
+  width: 291px;
+  height: 291px;
+  background-image: none;
+  margin: 20px 60px 0 auto;
+}
+
+.u-section-2 .u-text-1 {
+  font-weight: 700;
+  line-height: 1;
+  font-size: 3.75rem;
+  margin: -131px 0 0;
+}
+
+.u-section-2 .u-text-2 {
+  font-size: 1.25rem;
+  line-height: 2;
+  margin: 30px 0 0;
+}
+
+.u-section-2 .u-layout-cell-2 {
+  min-height: 810px;
+}
+
+.u-section-2 .u-container-layout-2 {
+  padding: 30px;
+}
+
+.u-section-2 .u-image-1 {
+  width: 293px;
+  height: 293px;
+  background-image: url("images/psocwhite.png");
+  background-position: 50% 50%;
+  margin: 0 auto;
+}
+
+@media (max-width: 1199px) {
+  .u-section-2 .u-sheet-1 {
+    min-height: 452px;
+  }
+
+  .u-section-2 .u-layout-wrap-1 {
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-2 .u-layout-cell-1 {
+    min-height: 493px;
+  }
+
+  .u-section-2 .u-layout-cell-2 {
+    min-height: 668px;
+  }
+
+  .u-section-2 .u-image-1 {
+    width: 378px;
+    height: 378px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-2 .u-sheet-1 {
+    min-height: 962px;
+  }
+
+  .u-section-2 .u-layout-wrap-1 {
+    margin-top: 1px;
+    margin-bottom: 1px;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-2 .u-layout-cell-1 {
+    min-height: 685px;
+  }
+
+  .u-section-2 .u-container-layout-1 {
+    padding-bottom: 25px;
+  }
+
+  .u-section-2 .u-shape-1 {
+    margin-right: 9px;
+  }
+
+  .u-section-2 .u-text-1 {
+    font-size: 3rem;
+  }
+
+  .u-section-2 .u-text-2 {
+    font-size: 1.125rem;
+  }
+
+  .u-section-2 .u-layout-cell-2 {
+    min-height: 685px;
+  }
+
+  .u-section-2 .u-image-1 {
+    width: 300px;
+    height: 300px;
+    margin-top: 18px;
+    margin-left: -30px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-2 .u-sheet-1 {
+    min-height: 737px;
+  }
+
+  .u-section-2 .u-layout-wrap-1 {
+    margin-top: -18px;
+    margin-bottom: 40px;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-2 .u-layout-cell-1 {
+    min-height: 715px;
+  }
+
+  .u-section-2 .u-container-layout-1 {
+    padding-top: 0;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-2 .u-shape-1 {
+    margin-top: 59px;
+  }
+
+  .u-section-2 .u-text-1 {
+    margin-top: -169px;
+  }
+
+  .u-section-2 .u-layout-cell-2 {
+    min-height: 560px;
+  }
+
+  .u-section-2 .u-container-layout-2 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-2 .u-image-1 {
+    width: 216px;
+    height: 216px;
+    margin-top: 0;
+    margin-left: 0;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-2 .u-sheet-1 {
+    min-height: 839px;
+  }
+
+  .u-section-2 .u-layout-wrap-1 {
+    margin-bottom: 0;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-2 .u-layout-cell-1 {
+    min-height: 857px;
+  }
+
+  .u-section-2 .u-container-layout-1 {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .u-section-2 .u-shape-1 {
+    width: 203px;
+    height: 203px;
+    margin-top: 66px;
+    margin-right: 17px;
+  }
+
+  .u-section-2 .u-text-1 {
+    font-size: 2.25rem;
+    margin-top: -187px;
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+
+  .u-section-2 .u-text-2 {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+
+  .u-section-2 .u-layout-cell-2 {
+    min-height: 353px;
+  }
+}.u-section-3 {
+  background-image: none;
+  min-height: 564px;
+}
+
+.u-section-3 .u-shape-1 {
+  height: 163px;
+  margin-top: 0;
+  margin-bottom: 0;
+  background-image: none;
+}
+
+.u-section-3 .u-list-1 {
+  width: 1065px;
+  margin: -103px auto 0;
+}
+
+.u-section-3 .u-repeater-1 {
+  grid-template-columns: calc(25% - 7.5px) calc(25% - 7.5px) calc(25% - 7.5px) calc(25% - 7.5px);
+  grid-gap: 10px 10px;
+  min-height: 269px;
+}
+
+.u-section-3 .u-list-item-1 {
+  background-image: none;
+}
+
+.u-section-3 .u-container-layout-1 {
+  padding: 30px;
+}
+
+.u-section-3 .u-icon-1 {
+  height: 39px;
+  width: 39px;
+  background-image: none;
+  color: rgb(71, 138, 201) !important;
+  margin: 0 auto 0 0;
+}
+
+.u-section-3 .u-text-1 {
+  font-size: 1.25rem;
+  margin-top: 17px;
+  margin-bottom: 0;
+}
+
+.u-section-3 .u-text-2 {
+  line-height: 1.4;
+  font-size: 0.9375rem;
+  font-style: italic;
+  margin-top: 7px;
+  margin-bottom: 0;
+}
+
+.u-section-3 .u-container-layout-2 {
+  padding: 30px;
+}
+
+.u-section-3 .u-icon-2 {
+  height: 39px;
+  width: 39px;
+  background-image: none;
+  color: rgb(71, 138, 201) !important;
+  margin: 0 auto 0 0;
+}
+
+.u-section-3 .u-text-3 {
+  font-size: 1.25rem;
+  margin-top: 17px;
+  margin-bottom: 0;
+}
+
+.u-section-3 .u-text-4 {
+  line-height: 1.4;
+  font-size: 0.9375rem;
+  font-style: italic;
+  margin-top: 7px;
+  margin-bottom: 0;
+}
+
+.u-section-3 .u-container-layout-3 {
+  padding: 30px;
+}
+
+.u-section-3 .u-icon-3 {
+  height: 39px;
+  width: 39px;
+  background-image: none;
+  color: rgb(71, 138, 201) !important;
+  margin: 0 auto 0 0;
+}
+
+.u-section-3 .u-text-5 {
+  font-size: 1.25rem;
+  margin-top: 17px;
+  margin-bottom: 0;
+}
+
+.u-section-3 .u-text-6 {
+  line-height: 1.4;
+  font-size: 0.9375rem;
+  font-style: italic;
+  margin-top: 7px;
+  margin-bottom: 0;
+}
+
+.u-section-3 .u-container-layout-4 {
+  padding: 30px;
+}
+
+.u-section-3 .u-icon-4 {
+  height: 39px;
+  width: 39px;
+  background-image: none;
+  color: rgb(71, 138, 201) !important;
+  margin: 0 auto 0 0;
+}
+
+.u-section-3 .u-text-7 {
+  font-size: 1.25rem;
+  margin-top: 17px;
+  margin-bottom: 0;
+}
+
+.u-section-3 .u-text-8 {
+  line-height: 1.4;
+  font-size: 0.9375rem;
+  font-style: italic;
+  margin-top: 7px;
+  margin-bottom: 0;
+}
+
+.u-section-3 .u-text-9 {
+  font-weight: 700;
+  font-size: 2.25rem;
+  margin: -547px auto 60px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-3 {
+    min-height: 689px;
+  }
+
+  .u-section-3 .u-shape-1 {
+    margin-top: -4px;
+  }
+
+  .u-section-3 .u-list-1 {
+    width: 940px;
+    margin-top: -99px;
+  }
+
+  .u-section-3 .u-text-9 {
+    width: auto;
+    margin-top: -632px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-3 {
+    min-height: 849px;
+  }
+
+  .u-section-3 .u-shape-1 {
+    margin-top: 0;
+  }
+
+  .u-section-3 .u-list-1 {
+    width: 720px;
+    margin-top: -74px;
+  }
+
+  .u-section-3 .u-repeater-1 {
+    grid-template-columns: calc(50% - 5px) calc(50% - 5px);
+    min-height: 463px;
+  }
+
+  .u-section-3 .u-icon-4 {
+    color: rgb(71, 138, 201) !important;
+  }
+
+  .u-section-3 .u-text-9 {
+    margin-top: -772px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-3 {
+    min-height: 1055px;
+  }
+
+  .u-section-3 .u-list-1 {
+    width: 540px;
+    height: auto;
+  }
+
+  .u-section-3 .u-text-9 {
+    margin-top: -966px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-3 {
+    min-height: 1570px;
+  }
+
+  .u-section-3 .u-list-1 {
+    width: 340px;
+  }
+
+  .u-section-3 .u-repeater-1 {
+    grid-template-columns: 100%;
+  }
+
+  .u-section-3 .u-text-9 {
+    font-size: 1.5rem;
+    margin-top: -1464px;
   }
 }
