--- a/Gallery.css
+++ b/Gallery.css
@@ -1,36 +1,56 @@
-.u-section-1 .u-sheet-1 {
-  min-height: 500px;
-}.u-section-2 .u-sheet-1 {
-  min-height: 500px;
+body{
+  background-position: 50% 50%; background-attachment: fixed;
+  background-image: url("./images/12.jpg");
+  box-shadow: inset 0 0 0 1000px rgba(0,0,0,.7);
+}
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 4px;
 }
 
-@media screen and (min-width: 980px) /* Desktop */ {
-  a img{
-    width: 25%;
-    height: 350px;
-    /* height: 100%; */
-    padding: 0.5%;
-    border-radius: 10% 10% 10% 10%;
-    /* float:left; */
+/* Create four equal columns that sits next to each other */
+.column {
+  flex: 25%;
+  max-width: 25%;
+  padding: 0 4px;
+}
+
+.column img {
+  margin-top: 8px;
+  vertical-align: middle;
+  width: 100%;
+  -webkit-filter: grayscale(0%); /* Safari 6.0 - 9.0 */
+  filter: grayscale(0%);
+}
+
+.column img:hover{
+  -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+  filter: grayscale(100%);
+  transform: scale(1.01);
+}
+
+/* Responsive layout - makes a two column-layout instead of four columns */
+@media screen and (max-width: 800px) {
+  .column {
+    flex: 50%;
+    max-width: 50%;
   }
-}
-
-@media screen  and (max-width: 979px) /* Tablet */ {
-  a img{
-    width: 50%;
-    height: 400px;
-    /* height: 100%; */
-    padding: 2%;
-    border-radius: 10% 10% 10% 10%;
+  .column img{
+    -webkit-filter: grayscale(0%); /* Safari 6.0 - 9.0 */
+    filter: grayscale(0%);
   }
+  
 }
 
-@media screen and (max-width: 500px) /* Mobile */ {
-  a img{
-    width: 100%;
-    height: 400px;
-    /* height: 100%; */
-    margin-bottom: 3%;
-    border-radius: 10% 10% 10% 10%;
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .column {
+    flex: 100%;
+    max-width: 100%;
+  }
+  .column img{
+    -webkit-filter: grayscale(0%); /* Safari 6.0 - 9.0 */
+    filter: grayscale(0%);
   }
 }
