--- a/Team.css
+++ b/Team.css
@@ -174,7 +174,7 @@ header{
 .u-section-2 .u-image-1 {
   width: 183px;
   height: 183px;
-  background-image: url("images/tanmay1.jpg");
+  background-image: url("images/Bashar.jpg");
   background-position: 50% 50%;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   margin: -38px auto 0;
