--- a/Gallery.css
+++ b/Gallery.css
@@ -3,6 +3,9 @@ body{
   background-image: url("./images/12.jpg");
   box-shadow: inset 0 0 0 1000px rgba(0,0,0,.7);
 }
+/* .zoom:hover{
+  transform: scale(5);
+} */
 .row {
   display: flex;
   flex-wrap: wrap;
@@ -15,7 +18,15 @@ body{
   max-width: 25%;
   padding: 0 4px;
 }
+/* .photo-galery-with-zoom img:active {
+    position: fixed;
+    top: 113px;
+    max-width: 30%;
+    max-height: 88vh;
+    z-index: 99999;
+    transition: 2s;
 
+} */
 .column img {
   margin-top: 8px;
   vertical-align: middle;
@@ -28,6 +39,7 @@ body{
   -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
   filter: grayscale(100%);
   transform: scale(1.01);
+
 }
 
 /* Responsive layout - makes a two column-layout instead of four columns */
@@ -40,7 +52,7 @@ body{
     -webkit-filter: grayscale(0%); /* Safari 6.0 - 9.0 */
     filter: grayscale(0%);
   }
-  
+
 }
 
 /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
